protocol-native: fix drain request acked too soon bug

Fixes: https://gitlab.freedesktop.org/pulseaudio/pulseaudio/issues/593
Signed-off-by: Diego Viola <diego.viola@gmail.com>